# freeflyer_ws

./: .gitignore
src/arduino_esp32/bno055_microros/: bno055_microros.ino
src/arduino_esp32/ff_receiver_fancy/: ff_receiver_fancy.ino
src/arduino_esp32/ff_transmitter_telemetry/: ff_transmitter_telemetry.ino  protocol.h
src/attitude_controller/: CMakeLists.txt  attitude_controller.xml  package.xml
src/attitude_controller/include/attitude_controller/: attitude_controller.hpp
src/attitude_controller/src/: attitude_controller.cpp
src/bang_bang_controller/: CMakeLists.txt  bang_bang_controller.xml  package.xml
src/bang_bang_controller/include/bang_bang_controller/: bang_bang_circle_controller.hpp
src/bang_bang_controller/src/: bang_bang_circle_controller.cpp
src/combined_pose_system/: package.xml  setup.cfg  setup.py
src/combined_pose_system/combined_pose_system/nodes/: gst_pose_cam.py  starfield_sync_node.py  vision_yaw.py
src/combined_pose_system/combined_pose_system/offline/: camera_calibration.py  charuco_calibration.py  charuco_utils.py  map_from_data.py  multi_charuco_calibration.py  multi_charuco_calibration_v1.py  print_charuco.py  star_map_part2.py  test_charuco.py
src/combined_pose_system/combined_pose_system/old/: align_vision_mm.py  csv_transformation_map.py  dual_trajectory_plotter.py  dual_trajectory_with_ekf_plotter.py  estimate_pose_covariance.py  fix_image_planar.py  map_from_data_v1.py  marvelmind_pose.py  pose_to_twist.py  rosbag_to_csv.py  single_trajectory_plotter.py  trajectory_comparison_logger.py  vision_pose.py
src/combined_pose_system/combined_pose_system/utils/: pose_system_core.py  utils_pose.py  utils_ros.py
src/combined_pose_system/config/: cluster_data_jan_10.json  ekf_mm_map.yaml  feb6_cluster_data.json
src/combined_pose_system/launch/: fusion_ekf.launch.py  mm_step1.launch.py  mm_step2.launch.py  vision_step1.launch.py  vision_step2.launch.py
src/freeflyer_bringup/: package.xml  setup.cfg  setup.py
src/freeflyer_bringup/config/: controllers.yaml  ekf_both.yaml  freeflyer.rviz  radial_controller.yaml  rw_rad_controller.yaml
src/freeflyer_bringup/launch/: bb_ctrl_sim.launch.py  common.launch.py  diagnostics.launch.py  ff_gazebo.launch.py  hardware.launch.py  rad_sim.launch.py  real.launch.py  rw_sim.launch.py  sim.launch.py  sim_ekf.launch.py
src/freeflyer_control/: package.xml  setup.cfg  setup.py
src/freeflyer_control/config/: controllers.yaml
src/freeflyer_control/freeflyer_control/: accel_odom_predictor.py  bang_bang_circle_controller.py  bang_bang_keyboard.py  bang_bang_radial_controller.py  bang_bang_rw_controller_v1.py  gazebo_to_pose.py  path_publisher.py  serial_bridge.py  serial_bridge_no_rw.py  thruster_odom_predictor.py  thruster_rw_odom_predictor.py
src/freeflyer_description/: CMakeLists.txt  package.xml
src/freeflyer_description/urdf/: bang_bang.urdf.xacro  ctrl_bb.urdf.xacro  ctrl_rw.urdf.xacro  freeflyer.urdf.xacro
src/freeflyer_diagnostics/: package.xml  setup.cfg  setup.py
src/freeflyer_diagnostics/freeflyer_diagnostics/: dual_error_plotter.py  error_plotter.py  force_velocity_live_plot.py
src/freeflyer_gazebo/: CMakeLists.txt  freeflyer_sim_no_rw.xml  freeflyer_sim_system.xml  package.xml
src/freeflyer_gazebo/include/freeflyer_gazebo/: freeflyer_sim_no_rw.hpp  freeflyer_sim_system.hpp
src/freeflyer_gazebo/plugins/: bang_bang_reaction_wheel.cpp  bang_bang_thruster.cpp  continuous_reaction_wheel.cpp  continuous_thruster.cpp  freeflyer_sim_no_rw.cpp  freeflyer_sim_system.cpp
src/freeflyer_gazebo/worlds/: air_table.world
src/freeflyer_hardware/: CMakeLists.txt  freeflyer_hardware.xml  package.xml
src/freeflyer_hardware/firmware/: stupid_esc_test_sweep.py
src/freeflyer_hardware/firmware/bno055_microros/: bno055_microros.ino
src/freeflyer_hardware/firmware/ff_receiver_fancy/: ._ff_receiver_fancy.ino  ff_receiver_fancy.ino
src/freeflyer_hardware/firmware/ff_transmitter_telemetry/: ff_transmitter_telemetry.ino  protocol.h
src/freeflyer_hardware/include/freeflyer_hardware/: freeflyer_system.hpp
src/freeflyer_hardware/src/: freeflyer_system.cpp
src/freeflyer_msgs/: CMakeLists.txt  package.xml
src/freeflyer_msgs/msg/: Actuators.msg
src/freeflyer_testing/: package.xml  setup.cfg  setup.py
src/freeflyer_testing/firmware/bno055_test_double/: bno055_test_double.ino
src/freeflyer_testing/freeflyer_testing/: esc_thrust_sweep.py  imu_accel_plot.py  keyboard_teleop.py  rw_alpha.py
src/gst_camera_streamer/: package.xml  setup.cfg  setup.py
src/gst_camera_streamer/gst_camera_streamer/: arm_cam.py  gst_camera_node_old.py
src/radial_controller/: CMakeLists.txt  package.xml  radial_controller.xml
src/radial_controller/include/radial_controller/: radial_controller.hpp
src/radial_controller/src/: radial_controller.cpp
