<?xml version="1.0"?>
<package format="3">
  <name>bang_bang_controller</name>
  <version>0.0.1</version>
  <description>Bang-bang orbit controller as a ros2_control plugin.</description>

  <maintainer email="you@todo.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
